Fix topbar bug involving overlapping expanding menus

--- a/_sass/minimal-mistakes/_topbar.scss
+++ b/_sass/minimal-mistakes/_topbar.scss
@@ -9,6 +9,7 @@
 
 .topbar {
     position: relative;
+    z-index: 0;
     border-bottom: 1px solid $border-color;
     -webkit-animation: $intro-transition;
     animation: $intro-transition;
